--- a/SPMS/Areas/Staff/Views/Project/MileStone.cshtml
+++ b/SPMS/Areas/Staff/Views/Project/MileStone.cshtml
@@ -34,11 +34,11 @@
 							<table class="table table-sm mb-0">
 								<thead>
 									<tr>
-										<th class="align-middle">Student</th>
+										<th class="align-middle" style="min-width: 12.5rem;">Student</th>
 										<th class="align-middle pe-7">Date</th>
-										<th class="align-middle" style="min-width: 12.5rem;">Chapter</th>
-										<th class="align-middle text-end">Chapter Material</th>
-										<th class="align-middle text-end">Status</th>
+										<th class="align-middle">Chapter</th>
+										<th class="align-middle">Chapter Material</th>
+										<th class="align-middle" @*text-end*@>Status</th>
 										<th class="no-sort"></th>
 									</tr>
 								</thead>
