--- a/SPMS/Views/Shared/_ProjectstudentHeader.cshtml
+++ b/SPMS/Views/Shared/_ProjectstudentHeader.cshtml
@@ -135,7 +135,7 @@
 							<div class="dropdown-menu dropdown-menu-end">
 								<div id="DZ_W_Notification1" class="widget-media dlab-scroll p-3" style="height:380px;">
 									<ul class="timeline">
-										@foreach (var item in @noti)
+										@foreach (var item in @noti.Where(x => x.IsRead.Equals(false)))
 										{
 											<li>
 												<div class="timeline-panel">
@@ -151,7 +151,7 @@
 										}
 									</ul>
 								</div>
-								<a class="all-notification" asp-action="notifications">See all notifications <i class="ti-arrow-end"></i></a>
+								<a class="all-notification" asp-controller="Notification" asp-action="notifications">See all notifications <i class="ti-arrow-end"></i></a>
 							</div>
 
 						</li>
