--- a/SPMS/Areas/Graduate/Views/Project/Details.cshtml
+++ b/SPMS/Areas/Graduate/Views/Project/Details.cshtml
@@ -1,107 +1,125 @@
 ﻿@inject IFileHelper _file;
 
 @{
-	ViewData["Title"] = "Project Details";
-	var prjt = ViewData["project"] as Project;
+    ViewData["Title"] = "Project Details";
+    var prjt = ViewData["project"] as Project;
 
 }
+
+<head>
+    <script src="https://unpkg.com/htmx.org@1.8.5" integrity="sha384-7aHh9lqPYGYZ7sTHvzP1t3BAfLhYSTy9ArHdP3Xsr9/3TlGurYgcPBoFmXX2TX/w" crossorigin="anonymous"></script>
+</head>
 
 <Partial name="_ProjectDetailsHeader" />
 <Partial name="_Sidebar" />
 
+
 <div class="content-body">
-	<!-- row -->
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-xl-12">
-				<div class="row">
-					<div class="col-xl-12">
-						<div class="card overflow-hidden">
-							<div class="company-profile">
-								<img src="~/assets/images/back1.jpg" style="opacity: 0.25;" sty alt="">
-							</div>
-							<div class="card-body">
-								<div class="row border-bottom pb-5">
-									<div class="col-xl-8 col-lg-9">
-										<div>
-												@if(prjt != null)
-												{
-													<h4 class="fs-32 font-w700">@prjt.Topic</h4>
-													@foreach (var item in @prjt.Students)
-													{
-														<span class="mb-2 d-block">Created by @item.FullName </span>
-													}
-												}
-											<div class="workload-button">
-												
-											</div>
-										</div>
-									</div>
-									<div class="col-xl-4 col-lg-3 info">
-										<div class="kanbanimg1">
-											<span><i class="fas fa-info-circle me-3"></i>Project Details</span>
-											<div class="dropdown ms-3">
-												<div class="btn-link" data-bs-toggle="dropdown">
-													<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-														<circle cx="12.4999" cy="3.5" r="2.5" fill="#A5A5A5" />
-														<circle cx="12.4999" cy="11.5" r="2.5" fill="#A5A5A5" />
-														<circle cx="12.4999" cy="19.5" r="2.5" fill="#A5A5A5" />
-													</svg>
-												</div>
-												<div class="dropdown-menu dropdown-menu-right">
-													<a class="dropdown-item" href="javascript:void(0)">Delete</a>
-													<a class="dropdown-item" href="javascript:void(0)">Edit</a>
-												</div>
-											</div>
-										</div>
+    <!-- row -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xl-12">
+                <div class="row">
+                    <div class="col-xl-12">
+                        <div class="card overflow-hidden">
+                            <div class="company-profile">
+                                <img src="~/assets/images/back1.jpg" alt="">
+                            </div>
+                            <div class="card-body">
+                                <div class="row border-bottom pb-5">
+                                    <div class="col-xl-8 col-lg-9">
+                                        <div>
+                                            @if (prjt != null)
+                                            {
+                                                <h4 class="fs-32 font-w700">@prjt.Topic</h4>
+                                                <span class="mb-2 d-block">
+                                                    Created by
+                                                    @foreach (var item in @prjt.Students)
+                                                    {
+                                                        @item.MatricNo <i> - </i>  @item.MatricNo
+                                                    }
+                                                </span>
+                                            }
+                                            <div class="workload-button">
+                                                <a href="javascript:void(0);" class="btn btn-primary btn-rounded">New<i class="fas fa-caret-down ms-2 scale5"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-xl-4 col-lg-3 info">
+                                        <div class="kanbanimg1">
+                                            <span><i class="fas fa-info-circle me-3"></i>Project Details</span>
+                                            <div class="dropdown ms-3">
+                                                <div class="btn-link" data-bs-toggle="dropdown">
+                                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <circle cx="12.4999" cy="3.5" r="2.5" fill="#A5A5A5" />
+                                                        <circle cx="12.4999" cy="11.5" r="2.5" fill="#A5A5A5" />
+                                                        <circle cx="12.4999" cy="19.5" r="2.5" fill="#A5A5A5" />
+                                                    </svg>
+                                                </div>
+                                                <div class="dropdown-menu dropdown-menu-right">
+                                                    <a class="dropdown-item" href="javascript:void(0)">Delete</a>
+                                                    <a class="dropdown-item" href="javascript:void(0)">Edit</a>
+                                                </div>
+                                            </div>
+                                        </div>
 
-									</div>
-									<div class="col-xl-3 mt-4 col-sm-6">
-										<div class="d-flex">
-											<span><i class="far fa-clock scale5 text-primary mt-2 me-3"></i></span>
-											<div>
-												<h4 class="fs-18 font-w500 text-black">Project Started on</h4>
-												@if (prjt != null)
-												{
-													<span> @prjt.DateSubmitted.ToLongDateString()</span>
-												}
-											</div>
-										</div>
-									</div>
-									<div class="col-xl-3 mt-4 col-sm-6">
-										<div class="d-flex">
-											<span><i class="far fa-clock scale5 text-primary mt-2 me-3"></i></span>
-											<div>
-												<h4 class="fs-18 font-w500 text-black">Due date</h4>
-												@if (prjt != null)
-												{
-													<span> @prjt.DateSubmitted.AddMonths(5).ToLongDateString()</span>
-												}
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="project-description">
-									<span class="fs-18 font-w500 mb-3 d-block">PROJECT ABSTRACT</span>
-										<p class="fs-18 font-w500">
-											@if (prjt != null)
-											{
-											<iframe seamless class="w-100" height="750" src="/output/@ViewBag.fileName">
-													<sspan>Unable to display file, Browser does not support iFrame.</sspan>
-												</iframe>
-											}
-										</p>
-								</div>
-							</div>
-							}
-						</div>
-					</div>
-				</div>
+                                    </div>
+                                    <div class="col-xl-3 mt-4 col-sm-6">
+                                        <div class="d-flex">
+                                            <span><i class="far fa-clock scale5 text-primary mt-2 me-3"></i></span>
+                                            <div>
+                                                <h4 class="fs-18 font-w500 text-black">Project Started on</h4>
+                                                @if (prjt != null)
+                                                {
+                                                    <span> @prjt.DateSubmitted.ToLongDateString()</span>
+                                                }
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-xl-3 mt-4 col-sm-6">
+                                        <div class="d-flex">
+                                            <span><i class="far fa-clock scale5 text-primary mt-2 me-3"></i></span>
+                                            <div>
+                                                <h4 class="fs-18 font-w500 text-black">Due date</h4>
+                                                @if (prjt != null)
+                                                {
+                                                    <span> @prjt.DateSubmitted.AddMonths(5).ToLongDateString()</span>
+                                                }
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="project-description">
+                                    <span class="fs-18 font-w500 mb-3 d-block">PROJECT PROPOSAL</span>
+                                    <p class="fs-18 font-w500">
+                                        @if (prjt != null)
+                                        {
+                                            <iframe seamless class="w-100" height="750" src="/output/@ViewBag.fileName">
+                                                <sspan>Unable to display file, Browser does not support iFrame.</sspan>
+                                            </iframe>
+                                        }
+                                    </p>
 
-			</div>
-		</div>
-	</div>
+                                </div>
+                                <div class="msg-button">
+                                    @if (prjt is not null)
+                                    {
+                                        @foreach (var item in prjt.Chapters)
+                                        {
+                                            <a asp-action="details" asp-route-chapterId="@item.ChapterId" class="btn btn-outline-primary ">@item.ChapterName</a>
+                                        }
+                                    }
+                                    else
+                                    {
+                                            
+                                    }
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </div>
-
-
-
