--- a/SPMS/Areas/Graduate/Views/Shared/_Layout.cshtml
+++ b/SPMS/Areas/Graduate/Views/Shared/_Layout.cshtml
@@ -31,7 +31,6 @@
 	<link rel="stylesheet" href="~/assets/vendor/pickadate/themes/default.css">
 	<link rel="stylesheet" href="~/assets/vendor/pickadate/themes/default.date.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
 </head>
 <body>
 
@@ -58,7 +57,7 @@
 	<script src="~/assets/vendor/jquery-steps/build/jquery.steps.min.js"></script>
 	<script src="~/assets/vendor/select2/js/select2.full.min.js"></script>
 	<script src="~/assets/js/plugins-init/select2-init.js"></script>
-	<script src=".~/assets/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+	<script src="~/assets/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
 
 @*	<!-- Apex Chart -->
 	<script src="~/assets/vendor/apexchart/apexchart.js"></script>*@
@@ -100,6 +99,7 @@
 		});
 	}
 	</script>
+
 	@await Component.InvokeAsync("Notyf")
 	@await RenderSectionAsync("Scripts", required: false)
 </body>
