--- a/SPMS/Areas/Staff/Views/Shared/_Layout.cshtml
+++ b/SPMS/Areas/Staff/Views/Shared/_Layout.cshtml
@@ -47,32 +47,53 @@
 	<script src="~/assets/vendor/global/global.min.js"></script>
 	<script src="~/assets/vendor/chart.js/Chart.bundle.min.js"></script>
 	<script src="~/assets/vendor/jquery-nice-select/js/jquery.nice-select.min.js"></script>
+	<script src="~/assets/vendor/jquery-steps/build/jquery.steps.min.js"></script>
+	<script src="~/assets/vendor/select2/js/select2.full.min.js"></script>
+	<script src="~/assets/js/plugins-init/select2-init.js"></script>
+	<script src="~/assets/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
 
-	<!-- Apex Chart -->
-	<script src="~/assets/vendor/apexchart/apexchart.js"></script>
+	@*	<!-- Apex Chart -->
+	<script src="~/assets/vendor/apexchart/apexchart.js"></script>*@
 
 	<script src="~/assets/vendor/chart.js/Chart.bundle.min.js"></script>
 
 	<!-- Chart piety plugin files -->
 	<script src="~/assets/vendor/peity/jquery.peity.min.js"></script>
+	<!-- Form Steps -->
+	<script src="~/assets/vendor/jquery-smartwizard/dist/js/jquery.smartWizard.js"></script>
+	@*<script src="~/assets/vendor/jquery-nice-select/js/jquery.nice-select.min.js"></script>*@
+
 	<!-- Dashboard 1 -->
 	<script src="~/assets/js/dashboard/dashboard-1.js"></script>
-
 	<script src="~/assets/vendor/owl-carousel/owl.carousel.js"></script>
+	<script src="~/assets/vendor/pickadate/picker.js"></script>
+	<script src="~/assets/vendor/pickadate/picker.time.js"></script>
+	<script src="~/assets/vendor/pickadate/picker.date.js"></script>
+	<script src="~/assets/js/plugins-init/pickadate-init.js"></script>
 
 	<script src="~/assets/js/custom.min.js"></script>
 	<script src="~/assets/js/dlabnav-init.js"></script>
 	<script src="~/assets/js/demo.js"></script>
-	 <script>
-	// Check that service workers are supported
-	if ('serviceWorker' in navigator) {
-		// Use the window load event to keep the page load performant
-		window.addEventListener('load', () => {
-				navigator.serviceWorker.register('/js/sw.js');
+	@*<script src="~/assets/js/styleSwitcher.js"></script>*@
+
+	<script>
+		$(document).ready(function () {
+			// SmartWizard initialize
+			$('#smartwizard').smartWizard();
 		});
-	}
+	</script>
+
+	<script>
+		// Check that service workers are supported
+		if ('serviceWorker' in navigator) {
+			// Use the window load event to keep the page load performant
+			window.addEventListener('load', () => {
+				navigator.serviceWorker.register('/js/sw.js');
+			});
+		}
 	</script>
 	@await Component.InvokeAsync("Notyf")
 	@await RenderSectionAsync("Scripts", required: false)
+
 </body>
 </html>
