--- a/SPMS/Views/Shared/_PProposalHeader.cshtml
+++ b/SPMS/Views/Shared/_PProposalHeader.cshtml
@@ -31,7 +31,7 @@
 							<div class="dropdown-menu dropdown-menu-end">
 								<div id="DZ_W_Notification1" class="widget-media dlab-scroll p-3" style="height:380px;">
 									<ul class="timeline">
-										@foreach (var item in @noti)
+										@foreach (var item in @noti.Where(x => x.IsRead.Equals(false)))
 										{
 											<li>
 												<div class="timeline-panel">
@@ -47,7 +47,7 @@
 										}
 									</ul>
 								</div>
-								<a class="all-notification" asp-action="notify">See all notifications <i class="ti-arrow-end"></i></a>
+								<a class="all-notification" asp-controller="dashboard" asp-action="notify">See all notifications <i class="ti-arrow-end"></i></a>
 							</div>
 						</li>
 						<li class="nav-item dropdown notification_dropdown">
@@ -117,7 +117,7 @@
 							<div class="dropdown-menu dropdown-menu-end">
 								<div id="DZ_W_Notification1" class="widget-media dlab-scroll p-3" style="height:380px;">
 									<ul class="timeline">
-										@foreach (var item in @noti)
+										@foreach (var item in @noti.Where(x => x.IsRead.Equals(false)))
 										{
 											<li>
 												<div class="timeline-panel">
@@ -133,7 +133,7 @@
 										}
 									</ul>
 								</div>
-								<a class="all-notification" asp-action="notifications">See all notifications <i class="ti-arrow-end"></i></a>
+								<a class="all-notification" asp-controller="Notification" asp-action="notifications">See all notifications <i class="ti-arrow-end"></i></a>
 							</div>
 
 						</li>
