--- a/SPMS/Areas/Graduate/Views/Project/Milestone.cshtml
+++ b/SPMS/Areas/Graduate/Views/Project/Milestone.cshtml
@@ -5,6 +5,12 @@
 	Chapter chap = new Chapter();
 }
 
+<head>
+	<script src="~/lib/jquery/dist/jquery.js"></script>
+	<script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+	<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+	<script src="https://unpkg.com/htmx.org@1.8.5" integrity="sha384-7aHh9lqPYGYZ7sTHvzP1t3BAfLhYSTy9ArHdP3Xsr9/3TlGurYgcPBoFmXX2TX/w" crossorigin="anonymous"></script>
+</head>
 
 <Partial name="_MilestoneHeader" />
 <Partial name="_Sidebar" />
@@ -183,7 +189,10 @@
 														</div>
 													</div>
 
-													<a asp-action="Delete" asp-route-id="@item.ChapterId" class="btn btn-danger shadow btn-xs sharp"><i class="fa fa-trash"></i></a>
+													<a hx-delete="/graduate/project/delete/@item.ChapterId" class="btn btn-danger shadow btn-xs sharp">
+														<i class="fa fa-trash"></i>
+													</a>
+
 												</div>
 											</td>
 
