--- a/SPMS/Areas/Graduate/Views/Project/Index.cshtml
+++ b/SPMS/Areas/Graduate/Views/Project/Index.cshtml
@@ -102,11 +102,13 @@
                                                     <div class="d-flex">
                                                         @if (@item.Status != "Approved")
                                                 {
-                                                        <a data-bs-toggle="modal" data-bs-target="#basicModal_@item.ProjectId" class="btn btn-primary shadow btn-xs sharp me-1">
+                                                        <a data-bs-toggle="modal" data-bs-target="#editModal_@item.ProjectId" class="btn btn-primary shadow btn-xs sharp me-1">
                                                             <i class="fas fa-pencil-alt"></i>
                                                         </a>
                                                 }
-                                                        <div class="modal fade" id="basicModal_@item.ProjectId">
+
+                                                        <!-- Modal -->
+                                                        <div class="modal fade" id="editModal_@item.ProjectId">
                                                             <div class="modal-dialog" role="document">
                                                                 <div class="modal-content">
                                                                     <div class="modal-header">
@@ -123,24 +125,24 @@
                                                                                 <div class="col-lg-12">
                                                                                     <div class="mb-3">
                                                                                         <label class="text-black font-w600 form-label">Project Topic <span class="required">*</span></label>
-                                                                                        <textarea asp-for="@pjt.Topic" name="Topic" placeholder="@item.Topic" class="form-control" rows="4" id="comment" required></textarea>
+                                                                                        <textarea placeholder="@item.Topic"  name="Topic"  class="form-control" rows="4" id="comment" required>@item.Topic</textarea>
                                                                                     </div>
                                                                                 </div>
                                                                                 <div class="col-lg-12">
                                                                                     <div class="mb-4">
                                                                                         <label class="text-black font-w600 form-label">Select Project Student(s) Matric<span class="required">*</span></label>
                                                                                     </div>
-                                                                                    <select asp-for="@pjt.Students" class="multi-select" name="student" multiple="multiple" id="studentId" asp-items="@(new SelectList(ViewBag.Students,"StudentId","MatricNo"))" required>
+                                                                                    <select asp-for="@pjt.Students" class="multi-select" name="selectedValues@(item.ProjectId)" id="selectedValues@(item.ProjectId)" multiple="multiple" id="studentId" asp-items="@(new SelectList(ViewBag.Students,"StudentId","MatricNo"))" required>
                                                                                         @if (ViewBag.Students != null)
                                                                                         {
-                                                                                            <option value="@pjt.Students"> @pjt.Matric </option>
+                                                                                            <option value="selectedValues(@pjt.Students)"> @pjt.Matric </option>
                                                                                         }
                                                                                     </select>
                                                                                 </div>
                                                                                 <div class="col-lg-12">
                                                                                     <div class="mb-3">
                                                                                         <label class="text-black font-w600 form-label">Upload Proposal <span class="required">*</span></label>
-                                                                                        <input asp-for="@pjt.File" name="File" type="file" accept=".doc, .docx" placeholder="@item.FileUrl" required class="form-file-input form-control">
+                                                                                        <input asp-for="@pjt.File" name="File" placeholder="@item.FileUrl" value="@item.FileUrl" type="file" accept=".doc, .docx" required class="form-file-input form-control">
 
                                                                                     </div>
                                                                                 </div>
@@ -155,7 +157,7 @@
                                                             </div>
                                                         </div>
 
-                                                        <a  hx-delete="/graduate/project/cdetails/@item.ProjectId"  class="btn btn-danger shadow btn-xs sharp">
+                                                        <a  hx-delete="/graduate/project/delete/@item.ProjectId"  class="btn btn-danger shadow btn-xs sharp">
                                                             <i class="fa fa-trash"></i>
                                                         </a>
 
