--- a/SPMS/Views/Shared/_ProjectDetailsHeader.cshtml
+++ b/SPMS/Views/Shared/_ProjectDetailsHeader.cshtml
@@ -39,16 +39,18 @@
 													<div class="media me-2">
 														<img alt="image" width="50" src="~/assets/images/avatar/8.png">
 													</div>
+													<a class="all-notification" asp-controller="dashboard"  asp-action="notify">
 													<div class="media-body">
 														<h6 class="mb-1">@item.Content.Substring(0,10)...</h6>
 														<small class="d-block">@item.When.ToLongDateString() - @item.When.ToShortTimeString()</small>
 													</div>
+													</a>
 												</div>
 											</li>
 										}
 									</ul>
 								</div>
-								<a class="all-notification" asp-action="notify">See all notifications <i class="ti-arrow-end"></i></a>
+								<a class="all-notification" asp-controller="dashboard"  asp-action="notify">See all notifications <i class="ti-arrow-end"></i></a>
 							</div>
 
 						</li>
@@ -125,10 +127,12 @@
 													<div class="media me-2">
 														<img alt="image" width="50" src="~/assets/images/avatar/8.png">
 													</div>
+													<a class="all-notification" asp-controller="Notification" asp-action="notifications">
 													<div class="media-body">
 														<h6 class="mb-1">@item.Content.Substring(0,10)...</h6>
 														<small class="d-block">@item.When.ToLongDateString() - @item.When.ToShortTimeString()</small>
 													</div>
+													</a>
 												</div>
 											</li>
 										}
