--- a/SPMS/Views/Shared/_ProjectDetailsHeader.cshtml
+++ b/SPMS/Views/Shared/_ProjectDetailsHeader.cshtml
@@ -39,7 +39,7 @@
 													<div class="media me-2">
 														<img alt="image" width="50" src="~/assets/images/avatar/8.png">
 													</div>
-													<a class="all-notification" asp-controller="dashboard"  asp-action="notify">
+													<a asp-controller="dashboard"  asp-action="notify">
 													<div class="media-body">
 														<h6 class="mb-1">@item.Content.Substring(0,10)...</h6>
 														<small class="d-block">@item.When.ToLongDateString() - @item.When.ToShortTimeString()</small>
@@ -127,7 +127,7 @@
 													<div class="media me-2">
 														<img alt="image" width="50" src="~/assets/images/avatar/8.png">
 													</div>
-													<a class="all-notification" asp-controller="Notification" asp-action="notifications">
+													<a asp-controller="Notification" asp-action="notifications">
 													<div class="media-body">
 														<h6 class="mb-1">@item.Content.Substring(0,10)...</h6>
 														<small class="d-block">@item.When.ToLongDateString() - @item.When.ToShortTimeString()</small>
