--- a/SPMS/Areas/Staff/Views/Project/ProjectArchive.cshtml
+++ b/SPMS/Areas/Staff/Views/Project/ProjectArchive.cshtml
@@ -77,7 +77,7 @@
                                             <td>@item.Department.Name</td>
                                             <td>@item.CaseStudy</td>
                                             <td>@item.Year</td>
-                                            <td><span class="badge light badge-success">@item.FileUrl</span></td>
+                                            <td><span class="badge light badge-success"><a href="@item.FileUrl" download>Download</a></span></td>
                                             <td>@item.DateSubmitted</td>
                                         </tr>
                                     }
