--- a/SPMS/Areas/Staff/Views/Project/ProjectArchive.cshtml
+++ b/SPMS/Areas/Staff/Views/Project/ProjectArchive.cshtml
@@ -3,11 +3,6 @@
     var archive = ViewData["projectsarchive"] as IEnumerable<ProjectArchive>;
 
 }
-<head>
-    https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css
-    https://cdn.datatables.net/1.13.3/css/dataTables.bootstrap5.min.css
-</head>
-
 <Partial name="_ProjectArchiveHeader" />
 <Partial name="_Sidebar" />
 
@@ -21,78 +16,42 @@
         </div>
 
         <div class="row">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-header">
-                        <h4 class="card-title">Department's Project List</h4>
-                    </div>
-                    <div class="card-body">
-                        <div class="table-responsive">
-                            @*<table id="example4" class="display" style="min-width: 845px">
-                            <thead>
-                            <tr>
-                            <th>Title</th>
-                            <th>Code</th>
-                            <th>Case Study</th>
-                            <th>Department </th>
-                            <th>Year</th>
-                            <th>File </th>
-                            <th>Date Submitted</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            @foreach(var item in archive)
-                            {
-                            <tr>
-                            <td>@item.ProjectCode</td>
-                            <td>@item.Title</td>
-                            <td>@item.Department</td>
-                            <td>@item.CaseStudy</td>
-                            <td>@item.Year</td>
-                            <td><span class="badge light badge-success">@item.File</span></td>
-                            <td>@item.DateSubmitted</td>
-                            </tr>
-                            }
-                            </tbody>
-                            </table>*@
-
-                            <table id="example" class="table table-striped" style="width:100%">
-                                <thead>
-                                    <tr>
-                                        <th>Code</th>
-                                        <th>Title</th>
-                                        <th>Department </th>
-                                        <th>Case Study</th>
-                                        <th>Year</th>
-                                        <th>File </th>
-                                        <th>Date Submitted</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach (var item in archive)
-                                    {
+            <div class="row">
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4 class="card-title">All Student Project List</h4>
+                        </div>
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table id="example4" class="display" style="min-width: 845px">
+                                    <thead>
                                         <tr>
-                                            <td>@item.ProjectCode</td>
-                                            <td>@item.Title</td>
-                                            <td>@item.Department.Name</td>
-                                            <td>@item.CaseStudy</td>
-                                            <td>@item.Year</td>
-                                            <td><span class="badge light badge-success"><a href="@item.FileUrl" download>Download</a></span></td>
-                                            <td>@item.DateSubmitted</td>
+                                            <th>Code</th>
+                                            <th>Title</th>
+                                            <th>Department </th>
+                                            <th>Case Study</th>
+                                            <th>Year</th>
+                                            <th>File </th>
+                                            <th>Date Submitted</th>
                                         </tr>
-                                    }
-                                </tbody>
-                                @* <tfoot>
-                                <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
-                                </tr>
-                                </tfoot>*@
-                            </table>
+                                    </thead>
+                                    <tbody>
+                                        @foreach (var item in archive)
+                                        {
+                                            <tr>
+                                                <td>@item.ProjectCode</td>
+                                                <td>@item.Title</td>
+                                                <td>@item.Department.Name</td>
+                                                <td>@item.CaseStudy</td>
+                                                <td>@item.Year</td>
+                                                <td><span class="badge light badge-success"><a href="@item.FileUrl" download>Download</a></span></td>
+                                                <td>@item.DateSubmitted</td>
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -101,11 +60,3 @@
 
     </div>
 </div>
-
-$(document).ready(function () {
-    $('#example').DataTable();
-});
-
-<script src="https://code.jquery.com/jquery-3.5.1.js" rel="stylesheet"></script>
-<script src="https://cdn.datatables.net/1.13.3/js/jquery.dataTables.min.js"></script>
-<script src=" https://cdn.datatables.net/1.13.3/js/dataTables.bootstrap5.min.js"></script>
