--- a/SPMS/Views/Shared/_NoticePartial.cshtml
+++ b/SPMS/Views/Shared/_NoticePartial.cshtml
@@ -35,7 +35,7 @@
 					<p>Then proceed to submit your project proposal</p>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-danger light" data-bs-dismiss="modal">Close</button>
+					<a asp-controller="dashboard"  asp-action="profile" class="btn btn-danger light">Ok,Thanks</a>
 				</div>
 			</div>
 		</div>
