--- a/SPMS/Views/Shared/_DashboardHeader.cshtml
+++ b/SPMS/Views/Shared/_DashboardHeader.cshtml
@@ -34,22 +34,7 @@
                             <div class="dropdown-menu dropdown-menu-end">
                                 <div id="DZ_W_Notification1" class="widget-media dlab-scroll p-3" style="height:380px;">
                                     <ul class="timeline">
-                                        @foreach (var item in @noti.Where(x => x.IsRead.Equals(false)))
-                                        {
-                                            <li>
-                                                <div class="timeline-panel">
-                                                    <div class="media me-2">
-                                                        <img alt="image" width="50" src="~/assets/images/avatar/8.png">
-                                                    </div>
-                                                    <a asp-controller="dashboard" asp-action="notify">
-                                                        <div class="media-body">
-                                                            <h6 class="mb-1">@item.Content.Substring(0,10)...</h6>
-                                                            <small class="d-block">@item.When.ToLongDateString() - @item.When.ToShortTimeString()</small>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                            </li>
-                                        }
+                                        <Partial name="_StudentNotiPartial" />
                                     </ul>
                                 </div>
                                 <a class="all-notification" asp-controller="dashboard" asp-action="notify">See all notifications <i class="ti-arrow-end"></i></a>
@@ -123,23 +108,7 @@
                             <div class="dropdown-menu dropdown-menu-end">
                                 <div id="DZ_W_Notification1" class="widget-media dlab-scroll p-3" style="height:380px;">
                                     <ul class="timeline">
-                                        @foreach (var item in @noti.Where(x => x.IsRead.Equals(false)))
-                                        {
-                                            <li>
-                                                <div class="timeline-panel">
-                                                    <div class="media me-2">
-                                                        <img alt="image" width="50" src="~/assets/images/avatar/8.png">
-                                                    </div>
-                                                    <a asp-controller="notification" asp-action="notifications">
-
-                                                    <div class="media-body">
-                                                        <h6 class="mb-1">@item.Content.Substring(0,10)...</h6>
-                                                        <small class="d-block">@item.When.ToLongDateString() - @item.When.ToShortTimeString()</small>
-                                                    </div>
-                                                    </a>
-                                                </div>
-                                            </li>
-                                        }
+                                       <Partial name="_StaffNotiPartial"/>
                                     </ul>
                                 </div>
                                 <a class="all-notification" asp-controller="notification" asp-action="notifications">See all notifications <i class="ti-arrow-end"></i></a>
@@ -252,7 +221,7 @@
                                 </div>
                             </a>
                             <div class="dropdown-menu dropdown-menu-end">
-                                <a href="#" class="dropdown-item ai-icon">
+                                <a href="void()" class="dropdown-item ai-icon">
                                     <svg id="icon-user1" xmlns="http://www.w3.org/2000/svg" class="text-primary" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
                                     <span class="ms-2">Profile </span>
                                 </a>
